mysql/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: mysql
  labels:
    app: mysql
spec:
  ports:
    - name: tcp
      port: 3306
      protocol: TCP
      targetPort: mysql
  selector:
    app: mysql
  type: ClusterIP
